--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,9 @@ features = ["full"]
 version = "0.5.2"
 features = ["load-shed", "timeout"]
 
+[dev-dependencies]
+insta = "1.43.1"
+
 [dev-dependencies.tower]
 version = "0.5.2"
 features = ["util"]
