ci: slim down cache size

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,7 +8,7 @@ name: CI
 
 env:
   CARGO_TERM_COLOR: always
-  RUSTFLAGS: "--deny warnings"
+  RUSTFLAGS: "-C debuginfo=0 --deny warnings"
 
 jobs:
   full:
